Tue Sep  4 18:05:08 UTC 2007  Jeff Parsons <j.parsons@vanderbilt.edu>

        * docs/compiler.html:
        
          Updated command line option table descriptions to reflect
          changes below.

Tue Sep  4 17:52:54 UTC 2007  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_codegen.cpp (start_anyop_header);
        
          Changed the logic of the check at the top of this method so
          that the options to suppress generation of Any operators or
          type codes will override the option to generate a separate
          header file for these things. However, the option to generate
          an empty *A.h file will override all of the above.

Mon Sep 03 02:50:30 CDT 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

	      * TAO version 1.6 released.

Thu Aug 30 08:09:00 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/Security/BiDirectional/ssl/*.pem:
          Generated new keys, old ones are expired

Wed Aug 29 18:47:00 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/FL_Cube/server.cpp:
          Fixed incorrect include. Thanks to Hans Utz <hans dot utz at nasa dot gov>
          for reporting this.

Wed Aug 29 10:40:00 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/POA/EndpointPolicy/run_test.pl:
          Fixed typo in the VxWorks specific part of this script

Wed Aug 29 10:07:00 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/POA/Forwarding/run_test.pl:
          Updated for VxWorks cross platform testing

Wed Aug 29 08:16:00 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/OBV/Simple/client.cpp:
        * tests/OBV/Simple/Client_i.cpp:
        * tests/OBV/Simple/run_test.pl:
          Let the client shutdown the server. Fixes test failure on
          OpenVMS

Wed Aug 29 07:52:00 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/POA/Default_Servant2/client.cpp: