@@ -770,7 +770,8 @@ also receives other options that are specific to it.<p>
     <td>Generate type codes and Any operators in *A.h and *A.cpp</td>
     <td>Decouples client and server decisions to compile and link
         TypeCode- and Any-related code, which is generated in
-        *C.h and *C.cpp by default. Overridden by -Sa and -St.</td>
+        *C.h and *C.cpp by default. If -Sa or -St also appear, then
+        an empty *A.h file is generated.</td>
   </tr>
 
   <tr><a name="Gos">
